# getwvkeys

./: .env.example  .env.sample  .gitignore  Dockerfile  LICENSE.md  README.md  alembic.ini  app.py  config.example.toml  config.json  config.py  config.toml.example  create_databases.py  docker-compose-dev.yaml  docker-compose.yaml  entrypoint.sh  getwvclone.py  getwvkeys.diff  libraries.py  main.py  migrate.py  pyproject.toml  requirements.txt  utils.py  yoyo.ini.sample
.github/workflows/: isort.yaml
alembic/: env.py
alembic/versions/: 4dcee16042d2_create_wvd.py  51d65f145c1f_create_prd.py  592b912adf54_init.py  684292138a0a_many_devices_to_many_users.py  8866b90c97bf_add_id_to_keys.py  8fbc59f03986_convert_device_to_wvd.py  af5d6ca3a942_update_device_model.py  c8ce82d0c054_rename_cdm_table.py  e1238372d8d1_init.py  ed93e0135889_add_traffic_logging.py  f194cc3e699f_create_system_user.py  f3df682d6393_add_id_to_keys.py
download/: channel4.py  getwvkeys.py  vdocipher.py
getwvclone/: __init__.py  config.py  libraries.py  main.py  pssh_utils.py  redis.py  utils.py
getwvclone/download/: getwvkeys.py
getwvclone/instance/: .gitignore  config.example.py
getwvclone/migrations/: 1654031858.user_status.up.cdms.sql  1654032325.user_role.up.cdms.sql  1654035069.user_discrim_text.up.cdms.sql  20220605_01_flRV8-initial-database-schema.py
getwvclone/models/: Blacklist.py  CDM.py  Key.py  Shared.py  User.py
getwvclone/pywidevine/cdm/: cdm.py  deviceconfig.py  key.py
getwvclone/pywidevine/cdm/formats/: widevine_pssh_data_pb2.py  wv_proto3_pb2.py
getwvclone/static/: main.css  main.js  search.js  vdocipher.js
getwvclone/templates/: admin_user.html  api.html  base.html  cache.html  error.html  faq.html  index.html  login.html  profile.html  scripts.html  search.html  success.html  upload_complete.html  vdocipher.html
getwvclone/templates/partials/: footer.html  nav.html
getwvkeys/: __init__.py  config.example.py  config.py  config.py.example  libraries.py  main.py  pssh.py  pssh_utils.py  redis.py  scripts.py  user.py  utils.py  ws.py
getwvkeys/download/: getwvkeys.py
getwvkeys/formats/: widevine_pssh_data_pb2.py  wv_proto2_pb2.py  wv_proto3_pb2.py
getwvkeys/models/: APIKey.py  Base.py  Blacklist.py  CDM.py  Device.py  Key.py  PRD.py  Shared.py  TrafficLog.py  User.py  UserDevice.py  UserPRD.py  UserWVD.py  WVD.py
getwvkeys/pywidevine/cdm/: cdm.py  deviceconfig.py  key.py  session.py
getwvkeys/pywidevine/cdm/formats/: license_protocol.proto  license_protocol_pb2.py  wv_proto2_pb2.py  (+1 more)
getwvkeys/scripts/: getwvkeys.py
getwvkeys/static/: main.css  main.js  search.js  vdocipher.js
getwvkeys/templates/: admin_user.html  api.html  base.html  cache.html  error.html  faq.html  index.html  login.html  playready.html  profile.html  scripts.html  search.html  success.html  upload.html  upload_complete.html  upload_prd.html  upload_prd_complete.html  vdocipher.html  widevine.html
getwvkeys/templates/partials/: footer.html  nav.html
getwvkeys/util/: rabbit.py
instance/: config.example.py
migrations/: 1653501605.database.up.database.sql  1653501606.cdms.up.cdms.sql  1653502037.cdm_uploader.up.cdms.sql  1653515079.users.up.cdms.sql  1653952383.users_not_null.up.cdms.sql  1653952490.users_copy_old.up.cdms.sql  1653952632.rename_users_table.up.cdms.sql
pywidevine/cdm/: cdm.py  deviceconfig.py  key.py  vmp.py
pywidevine/cdm/formats/: wv_proto2_pb2.py  wv_proto3_pb2.py
scripts/: wvd_migration_helper.py
static/: main.css  main.js  search.js
templates/: admin_user.html  api.html  base.html  cache.html  error.html  faq.html  find.html  index.html  login.html  profile.html  scripts.html  upload.html  upload_complete.html
templates/partials/: footer.html  nav.html
