[tool.poetry]
name = "getwvkeys"
version = "0.1.1"
description = "Widevine License Proxy"
authors = [
    "notaghost <65109659+Notaghost9997@users.noreply.github.com>",
    "Puyodead1 <14828766+Puyodead1@users.noreply.github.com>"
]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Flask = "^2.1.2"
Flask-Login = "^0.6.1"
oauthlib = "3.2.1"
requests = "^2.27.1"
protobuf = "3.20.2"
pycryptodomex = "^3.14.1"
PyYAML = "^6.0"
coloredlogs = "^15.0.1"
dunamai = "^1.12.0"
python-dotenv = "^0.20.0"
Cerberus = "^1.3.4"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
redis = "^4.3.3"
validators = "^0.20.0"
mariadb = "^1.1.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.scripts]
serve = 'getwvkeys.main:main'
setup = 'getwvkeys.main:setup'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
