[tool.poetry]
name = "getwvkeys"
version = "0.1.2"
description = "Widevine License Proxy"
authors = [
    "notaghost <65109659+Notaghost9997@users.noreply.github.com>",
    "Puyodead1 <14828766+Puyodead1@users.noreply.github.com>",
]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Flask = "^2.2.5"
Flask-Login = "^0.6.1"
oauthlib = "3.2.2"
requests = "^2.31.0"
protobuf = "4.25.4"
pycryptodomex = "^3.14.1"
PyYAML = "^6.0"
coloredlogs = "^15.0.1"
dunamai = "^1.12.0"
python-dotenv = "^0.20.0"
Cerberus = "^1.3.4"
Flask-SQLAlchemy = ">=3.1.1"
gunicorn = "^23.0.0"
validators = "^0.20.0"
toml = "^0.10.2"
sqlalchemy = ">=2.0.16"
alembic = "^1.13.1"
mariadb = { version = "^1.1.10", optional = true }
mysql-connector-python = { version = "^9.1.0", optional = true }
pywidevine = "^1.8.0"
waitress = "^3.0.0"
click = "^8.1.7"
redis = "^5.2.0"
flask-caching = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.scripts]
serve = 'getwvkeys.main:main'
migrate = 'getwvkeys.main:run_migrations'
gwvk = 'getwvkeys.scripts:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.extras]
mysql = ["mysql-connector-python"]
mariadb = ["mariadb"]
