[tool.poetry]
name = "getwvkeys"
version = "0.1.3"
description = "Widevine License Proxy"
authors = [
    "notaghost <65109659+Notaghost9997@users.noreply.github.com>",
    "Puyodead1 <14828766+Puyodead1@users.noreply.github.com>",
]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Flask = "^2.2.5"
Flask-Login = "^0.6.1"
oauthlib = "3.2.2"
requests = "^2.31.0"
protobuf = "^4.24.1"
pycryptodomex = "^3.14.1"
PyYAML = "^6.0"
coloredlogs = "^15.0.1"
dunamai = "^1.12.0"
python-dotenv = "^0.20.0"
Cerberus = "^1.3.4"
Flask-SQLAlchemy = ">=3.1.1"
gunicorn = "^23.0.0"
redis = "^4.4.4"
validators = "^0.20.0"
sqlalchemy = ">=2.0.16"
waitress = "^3.0.0"
flask-caching = "^2.3.0"
toml = "^0.10.2"
pyplayready = "^0.4.2"
alembic = "^1.14.0"
pywidevine = "^1.8.0"

[tool.poetry.scripts]
serve = 'getwvkeys.main:main'
migrate = 'getwvkeys.main:run_migrations'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

# Optional Mariadb support
[tool.poetry.group.mariadb]
optional = true

[tool.poetry.group.mariadb.dependencies]
mariadb = "^1.1.12"

# Optional MySQL support
[tool.poetry.group.mysql]
optional = true

[tool.poetry.group.mysql.dependencies]
mysql-connector-python = "*"

# Dev dependencies
[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
